backups/stpi-router.virtual-labs.ac.in/vz/private/12236/root/iptables.txt
# Generated by iptables-save v1.4.7 on Wed Mar  4 10:17:38 2015
*nat
:PREROUTING ACCEPT [349699:23713914]
:POSTROUTING ACCEPT [759867:46712084]
:OUTPUT ACCEPT [372:30341]
-A PREROUTING -d 196.12.53.133/32 -p tcp -m tcp --dport 22 -j DNAT --to-destination 10.4.12.169 
-A PREROUTING -d 196.12.53.130/32 -p udp -m udp --dport 53 -j DNAT --to-destination 10.4.12.202 
-A PREROUTING -d 196.12.53.130/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 10.4.12.202 
-A PREROUTING -d 196.12.53.134/32 -p udp -m udp --dport 53 -j DNAT --to-destination 10.4.12.161 
-A PREROUTING -d 196.12.53.134/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 10.4.12.161 
-A PREROUTING -d 196.12.53.135/32 -j DNAT --to-destination 10.4.12.156 
-A PREROUTING -d 196.12.53.132/32 -j DNAT --to-destination 10.4.12.165 
-A PREROUTING -d 196.12.53.136/32 -j DNAT --to-destination 10.4.14.223 
-A PREROUTING -d 196.12.53.131/32 -j DNAT --to-destination 10.4.12.201 
-A PREROUTING -d 196.12.53.130/32 -p tcp -m tcp --dport 3389 -j DNAT --to-destination 10.4.12.175 
-A PREROUTING -d 196.12.53.130/32 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 10.4.13.251 
-A PREROUTING -d 196.12.53.130/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.4.12.159 
-A PREROUTING -d 196.12.53.130/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.4.12.159 
-A PREROUTING -d 196.12.53.137/32 -p tcp -m tcp --dport 21 -j DNAT --to-destination 10.4.12.225 
-A PREROUTING -d 196.12.53.137/32 -p tcp -m tcp --dport 22 -j DNAT --to-destination 10.4.12.225 
-A PREROUTING -d 196.12.53.137/32 -p tcp -m tcp --dport 8000 -j DNAT --to-destination 10.4.12.225 
-A PREROUTING -d 196.12.53.137/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.4.12.225 
-A PREROUTING -d 196.12.53.138/32 -p tcp -m tcp --dport 21 -j DNAT --to-destination 10.4.12.226 
-A PREROUTING -d 196.12.53.138/32 -p tcp -m tcp --dport 22 -j DNAT --to-destination 10.4.12.226 
-A PREROUTING -d 196.12.53.138/32 -p tcp -m tcp --dport 8000 -j DNAT --to-destination 10.4.12.226 
-A PREROUTING -d 196.12.53.138/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.4.12.226 
-A PREROUTING -d 196.12.53.139/32 -p tcp -m tcp --dport 21 -j DNAT --to-destination 10.4.12.227 
-A PREROUTING -d 196.12.53.139/32 -p tcp -m tcp --dport 22 -j DNAT --to-destination 10.4.12.227 
-A PREROUTING -d 196.12.53.139/32 -p tcp -m tcp --dport 8000 -j DNAT --to-destination 10.4.12.227 
-A PREROUTING -d 196.12.53.139/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.4.12.227 
-A PREROUTING -d 196.12.53.140/32 -i eth0 -j DNAT --to-destination 10.4.15.185 
-A POSTROUTING -s 10.4.12.169/32 -p tcp -m tcp --dport 22 -j SNAT --to-source 196.12.53.133 
-A POSTROUTING -s 10.4.12.161/32 -p tcp -m tcp --sport 53 -j SNAT --to-source 196.12.53.134 
-A POSTROUTING -s 10.4.12.161/32 -p udp -m udp --sport 53 -j SNAT --to-source 196.12.53.134 
-A POSTROUTING -s 10.4.12.156/32 -j SNAT --to-source 196.12.53.135 
-A POSTROUTING -s 10.4.12.165/32 -j SNAT --to-source 196.12.53.132 
-A POSTROUTING -s 10.4.14.223/32 -j SNAT --to-source 196.12.53.136 
-A POSTROUTING -s 10.4.12.201/32 -j SNAT --to-source 196.12.53.131 
-A POSTROUTING -s 10.4.12.175/32 -p tcp -m tcp --dport 3389 -j SNAT --to-source 196.12.53.130 
-A POSTROUTING -d 10.4.13.251/32 -p tcp -m tcp --dport 8080 -j SNAT --to-source 196.12.53.130 
-A POSTROUTING -s 10.4.12.225/32 -p tcp -m tcp --dport 21 -j SNAT --to-source 196.12.53.137 
-A POSTROUTING -s 10.4.12.225/32 -p tcp -m tcp --dport 22 -j SNAT --to-source 196.12.53.137 
-A POSTROUTING -s 10.4.12.225/32 -p tcp -m tcp --dport 8000 -j SNAT --to-source 196.12.53.137 
-A POSTROUTING -s 10.4.12.225/32 -p tcp -m tcp --dport 80 -j SNAT --to-source 196.12.53.137 
-A POSTROUTING -s 10.4.12.226/32 -p tcp -m tcp --dport 21 -j SNAT --to-source 196.12.53.138 
-A POSTROUTING -s 10.4.12.226/32 -p tcp -m tcp --dport 22 -j SNAT --to-source 196.12.53.138 
-A POSTROUTING -s 10.4.12.226/32 -p tcp -m tcp --dport 8000 -j SNAT --to-source 196.12.53.138 
-A POSTROUTING -s 10.4.12.226/32 -p tcp -m tcp --dport 80 -j SNAT --to-source 196.12.53.138 
-A POSTROUTING -s 10.4.12.227/32 -p tcp -m tcp --dport 21 -j SNAT --to-source 196.12.53.139 
-A POSTROUTING -s 10.4.12.227/32 -p tcp -m tcp --dport 22 -j SNAT --to-source 196.12.53.139 
-A POSTROUTING -s 10.4.12.227/32 -p tcp -m tcp --dport 8000 -j SNAT --to-source 196.12.53.139 
-A POSTROUTING -s 10.4.12.227/32 -p tcp -m tcp --dport 80 -j SNAT --to-source 196.12.53.139 
-A POSTROUTING -s 10.4.15.185/32 -o eth0 -j SNAT --to-source 196.12.53.140 
-A POSTROUTING -s 10.0.0.0/8 -o eth0 -j SNAT --to-source 196.12.53.130 
COMMIT
# Completed on Wed Mar  4 10:17:38 2015
# Generated by iptables-save v1.4.7 on Wed Mar  4 10:17:38 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -j ACCEPT 
-A FORWARD -j ACCEPT 
-A OUTPUT -j ACCEPT 
COMMIT
# Completed on Wed Mar  4 10:17:38 2015
